Bug 422816 - Screen edges desktop effect no longer works
Summary: Screen edges desktop effect no longer works
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.19.0
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 422801 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-11 13:45 UTC by Kishore Gopalakrishnan
Modified: 2020-06-18 08:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2020-06-11 13:45:02 UTC
SUMMARY
After upgrading to Plasma 5.19, the 'Screen Edges' desktop effect (that highlights edges or corners which have actions bound to them when the mouse cursor approached them) no longer works.

STEPS TO REPRODUCE
1. Bind some action to a screen corner (like 'present windows')
2. Check that the 'screen edge' effect is enabled
3. Move the cursor to the screen corner/edge which you had configured.

OBSERVED RESULT
The action works, but there is no blue glow when the mouse approaches the edge/corner like in previous Kwin versions.

EXPECTED RESULT
The effect should work if enabled, or it should be removed if this decision is intentional.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.19.0
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0
Kernel Version: 5.6.15-arch1-1
Comment 1 sahsanu 2020-06-12 22:47:45 UTC
Same issue on KDE Neon after the upgrade to Plasma 5.19.0.
Comment 2 Vlad Zahorodnii 2020-06-17 06:43:14 UTC
Can you please run `qdbus org.kde.KWin /KWin supportInformation` from terminal and post the output here?
Comment 3 Kishore Gopalakrishnan 2020-06-17 06:50:31 UTC
(In reply to Vlad Zahorodnii from comment #2)
> Can you please run `qdbus org.kde.KWin /KWin supportInformation` from
> terminal and post the output here?

Here is the output:

==========================

Version
=======
KWin version: 5.19.0
Qt Version: 5.15.0
Qt compile version: 5.15.0
XCB compile version: 1.14

Operation Mode: X11 only

Build Options
=============
KWIN_BUILD_DECORATIONS: yes
KWIN_BUILD_TABBOX: yes
KWIN_BUILD_ACTIVITIES: yes
HAVE_DRM: yes
HAVE_GBM: yes
HAVE_EGL_STREAMS: yes
HAVE_X11_XCB: yes
HAVE_EPOXY_GLX: yes
HAVE_WAYLAND_EGL: yes

X11
===
Vendor: The X.Org Foundation
Vendor Release: 12008000
Protocol Version/Revision: 11/0
SHAPE: yes; Version: 0x11
RANDR: yes; Version: 0x14
DAMAGE: yes; Version: 0x11
Composite: yes; Version: 0x4
RENDER: yes; Version: 0xb
XFIXES: yes; Version: 0x50
SYNC: yes; Version: 0x31
GLX: yes; Version: 0x0

Decoration
==========
Plugin: org.kde.breeze
Theme: 
Plugin recommends border size: None
Blur: 0
onAllDesktopsAvailable: true
alphaChannelSupported: true
closeOnDoubleClickOnMenu: false
decorationButtonsLeft: 4, 3, 2, 0
decorationButtonsRight: 
borderSize: 0
gridUnit: 14
font: Noto Sans,10,-1,0,50,0,0,0,0,0,Regular
smallSpacing: 3
largeSpacing: 14

Platform
==========
Name: KWin::X11StandalonePlatform

Options
=======
focusPolicy: 1
nextFocusPrefersMouse: false
clickRaise: true
autoRaise: true
autoRaiseInterval: 300
delayFocusInterval: 300
shadeHover: false
shadeHoverInterval: 250
separateScreenFocus: false
placement: 4
focusPolicyIsReasonable: true
borderSnapZone: 10
windowSnapZone: 10
centerSnapZone: 0
snapOnlyWhenOverlapping: false
rollOverDesktops: true
focusStealingPreventionLevel: 1
operationTitlebarDblClick: 5000
operationMaxButtonLeftClick: 5000
operationMaxButtonMiddleClick: 5015
operationMaxButtonRightClick: 5014
commandActiveTitlebar1: 0
commandActiveTitlebar2: 27
commandActiveTitlebar3: 2
commandInactiveTitlebar1: 4
commandInactiveTitlebar2: 27
commandInactiveTitlebar3: 2
commandWindow1: 7
commandWindow2: 8
commandWindow3: 8
commandWindowWheel: 28
commandAll1: 10
commandAll2: 3
commandAll3: 14
keyCmdAllModKey: 16777251
showGeometryTip: false
condensedTitle: false
electricBorderMaximize: true
electricBorderTiling: true
electricBorderCornerRatio: 0.25
borderlessMaximizedWindows: true
killPingTimeout: 5000
hideUtilityWindowsForInactive: true
compositingMode: 1
useCompositing: true
hiddenPreviews: 1
glSmoothScale: 2
xrenderSmoothScale: false
maxFpsInterval: 16666666
refreshRate: 0
vBlankTime: 6000000
glStrictBinding: true
glStrictBindingFollowsDriver: true
glCoreProfile: true
glPreferBufferSwap: 101
glPlatformInterface: 1
windowsBlockCompositing: true

Screen Edges
============
desktopSwitching: false
desktopSwitchingMovingClients: false
cursorPushBackDistance: 1x1
timeThreshold: 150
reActivateThreshold: 350
actionTopLeft: 0
actionTop: 0
actionTopRight: 1
actionRight: 0
actionBottomRight: 2
actionBottom: 0
actionBottomLeft: 0
actionLeft: 0

Screens
=======
Multi-Head: no
Active screen follows mouse:  yes
Number of Screens: 1

Screen 0:
---------
Name: eDP
Geometry: 0,0,1920x1080
Scale: 1
Refresh Rate: 60.007


Compositing
===========
Compositing is active
Compositing Type: OpenGL
OpenGL vendor string: X.Org
OpenGL renderer string: AMD RAVEN (DRM 3.37.0, 5.7.2-arch1-1, LLVM 10.0.0)
OpenGL version string: 4.6 (Compatibility Profile) Mesa 20.1.1
OpenGL platform interface: GLX
OpenGL shading language version string: 4.60
Driver: RadeonSI
GPU class: Vega
OpenGL version: 4.6
GLSL version: 4.60
Mesa version: 20.1.1
X server version: 1.20.8
Linux kernel version: 5.7.2
Direct rendering: Requires strict binding: yes
GLSL shaders:  yes
Texture NPOT support:  yes
Virtual Machine:  no
OpenGL 2 Shaders are used
Painting blocks for vertical retrace:  yes

Loaded Effects:
---------------
kwin4_effect_windowaperture
kwin4_effect_squash
zoom
kwin4_effect_morphingpopups
kwin4_effect_dialogparent
kwin4_effect_fade
kwin4_effect_translucency
kwin4_effect_maximize
kwin4_effect_dimscreen
kwin4_effect_logout
kwin4_effect_sessionquit
kwin4_effect_frozenapp
kwin4_effect_fadingpopups
kwin4_effect_login
slidingpopups
screenshot
desktopgrid
colorpicker
wobblywindows
presentwindows
highlightwindow
blur
contrast
startupfeedback
screenedge
kscreen
invert

Currently Active Effects:
-------------------------
blur
contrast
invert

Effect Settings:
----------------
kwin4_effect_windowaperture:
isActiveFullScreenEffect: false

kwin4_effect_squash:
isActiveFullScreenEffect: false

zoom:
zoomFactor: 1.2
mousePointer: 0
mouseTracking: 0
enableFocusTracking: false
followFocus: true
focusDelay: 350
moveFactor: 20
targetZoom: 1

kwin4_effect_morphingpopups:
isActiveFullScreenEffect: false

kwin4_effect_dialogparent:
isActiveFullScreenEffect: false

kwin4_effect_fade:
isActiveFullScreenEffect: false

kwin4_effect_translucency:
isActiveFullScreenEffect: false

kwin4_effect_maximize:
isActiveFullScreenEffect: false

kwin4_effect_dimscreen:
isActiveFullScreenEffect: false

kwin4_effect_logout:
isActiveFullScreenEffect: false

kwin4_effect_sessionquit:
isActiveFullScreenEffect: false

kwin4_effect_frozenapp:
isActiveFullScreenEffect: false

kwin4_effect_fadingpopups:
isActiveFullScreenEffect: false

kwin4_effect_login:
isActiveFullScreenEffect: false

slidingpopups:
slideInDuration: 150
slideOutDuration: 250

screenshot:

desktopgrid:
zoomDuration: 300
border: 10
desktopNameAlignment: 0
layoutMode: 0
customLayoutRows: 2
usePresentWindows: true

colorpicker:

wobblywindows:
stiffness: 0.15
drag: 0.8
moveFactor: 0.1
xTesselation: 20
yTesselation: 20
minVelocity: 0
maxVelocity: 1000
stopVelocity: 0.5
minAcceleration: 0
maxAcceleration: 1000
stopAcceleration: 0.5
moveWobble: true
resizeWobble: true

presentwindows:
layoutMode: 0
showCaptions: true
showIcons: true
doNotCloseWindows: false
ignoreMinimized: false
accuracy: 20
fillGaps: true
fadeDuration: 150
showPanel: false
leftButtonWindow: 1
rightButtonWindow: 2
middleButtonWindow: 0
leftButtonDesktop: 2
middleButtonDesktop: 0
rightButtonDesktop: 0

highlightwindow:

blur:

contrast:

startupfeedback:
type: 1

screenedge:

kscreen:

invert:
Comment 4 Bug Janitor Service 2020-06-17 07:54:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/62
Comment 5 Vlad Zahorodnii 2020-06-17 07:56:39 UTC
Git commit bc2df9f84be7ff12ab7e67ee7931eae1f5aeacce by Vlad Zahorodnii.
Committed on 17/06/2020 at 07:53.
Pushed by davidedmundson into branch 'Plasma/5.19'.

[x11] Provide physical dimensions for outputs

Since ScreenEdge no longer uses physicalDpiX() and physicalDpiY() from
the QPaintDevice class in favor of our own helpers, we need to ensure
that the X11 platform provides valid output physical dimensions.
FIXED-IN: 5.19.2

M  +10   -0    plugins/platforms/x11/standalone/x11_output.cpp
M  +4    -0    plugins/platforms/x11/standalone/x11_output.h
M  +18   -4    plugins/platforms/x11/standalone/x11_platform.cpp

https://invent.kde.org/plasma/kwin/commit/bc2df9f84be7ff12ab7e67ee7931eae1f5aeacce
Comment 6 Vlad Zahorodnii 2020-06-18 08:42:21 UTC
*** Bug 422801 has been marked as a duplicate of this bug. ***