plugins/platforms/x11/standalone/x11_platform.cpp
@@ -506,15 +506,29 @@ void X11StandalonePlatform::doUpdateOutputs()
             o->setGeometry(geo);
             o->setRefreshRate(refreshRate * 1000);
 
-            QString name;
             for (int j = 0; j < info->num_outputs; ++j) {
                 Xcb::RandR::OutputInfo outputInfo(outputInfos.at(j));
-                if (crtc == outputInfo->crtc) {
-                    name = outputInfo.name();
+                if (outputInfo->crtc != crtc) {
+                    continue;
+                }
+                QSize physicalSize(outputInfo->mm_width, outputInfo->mm_height);
+                switch (info->rotation) {
+                case XCB_RANDR_ROTATION_ROTATE_0:
+                case XCB_RANDR_ROTATION_ROTATE_180:
+                    break;
+                case XCB_RANDR_ROTATION_ROTATE_90:
+                case XCB_RANDR_ROTATION_ROTATE_270:
+                    physicalSize.transpose();
+                    break;
+                case XCB_RANDR_ROTATION_REFLECT_X:
+                case XCB_RANDR_ROTATION_REFLECT_Y:
                     break;
                 }
+                o->setName(outputInfo.name());
+                o->setPhysicalSize(physicalSize);
+                break;
             }
-            o->setName(name);
+
             m_outputs << o;
         }
     }
